# nonebot-plugin-werewolf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  pyproject.toml
.github/workflows/: lint.yml  pypi-publish.yml  pyright.yml
nonebot_plugin_werewolf/: __init__.py  _timeout.py  config.py  constant.py  dead_channel.py  exception.py  game.py  input_store.py  matchers.py  models.py  ob11_ext.py  player.py  player_set.py  utils.py
nonebot_plugin_werewolf/matchers/: __init__.py  _prepare_game.py  dc_button.py  depends.py  edit_behavior.py  edit_preset.py  message_in_game.py  ob11_ext.py  start_game.py  superuser_ops.py
nonebot_plugin_werewolf/matchers/poke/: __init__.py  chronocat_poke.py  milky_poke.py  ob11_poke.py
nonebot_plugin_werewolf/players/: __init__.py  can_shoot.py  civilian.py  guard.py  hunter.py  idiot.py  jester.py  joker.py  player.py  prophet.py  shooter.py  werewolf.py  witch.py  wolfking.py
scripts/: bot.py  lint.cmd  update_version.py
tests/: conftest.py  fake.py  test_start_game.py  test_utils.py
